re PR inline-asm/8788 (ICE in emit_move_insn, at expr.c:3089)

PR inline-asm/8788
	* stmt.c (expand_asm_operands): Avoid calling force_reg on BLKmode
	operands.

	* gcc.dg/pr8788-1.c: New testcase.

From-SVN: r99422